Update to 1.0.2. Supporting Velocity 3.3.0 (latest).